[package]
name = "nspic"
version = "0.2.0"
edition = "2021"

[dependencies]
log = ">=0.4"
env_logger = ">=0.10"
warp = ">=0.3"
tokio = { version = ">=1", features = ["rt-multi-thread"] }
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
urlencoding = ">=2"
time = { version = ">=0.3", features = ["formatting"] }
rand = ">=0.8"
sha2 = ">=0.10"
regex = ">=1.8"
base64 = ">=0.21"
rusqlite = ">=0.29"
r2d2 = ">=0.8"
clap = ">=4"
toml = ">=0.5"
tera = { version = ">=1", default-features = false }
futures-util = ">=0.3"
bytes = ">=1"
ureq = ">=2.9"
